# econ-graph

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  8_HOUR_DEVELOPMENT_SESSION.md  8_HOUR_SESSION_COMPLETION_REPORT.md  ADMIN_SECURITY.md  AI_DEVELOPER_EXECTATIONS.md  AI_DEVELOPER_EXPECTATIONS.md  CHART_API_SERVICE.md  CI_CLEANUP_DESIGN.md  CI_FAILURE_TROUBLESHOOTING.md  CI_MONITORING_GUIDE.md  COMPREHENSIVE_SECURITY_ASSESSMENT_REPORT.md  DEPLOYMENT_RESTART.md  EPIC_DEMO_README.md  FINAL_CI_STATUS.md  FINAL_COMPREHENSIVE_SECURITY_ASSESSMENT_REPORT.md  FINANCIAL_DATA_USER_RESEARCH_PLAN.md  FRONTEND_SUMMARY.md  FULLTEXT_SEARCH.md  INVESTOR_PITCH.md  K8S_RESTART_COMMANDS.md  LICENSE  MCP_SERVER.md  PRIVACY_POLICY.md  PROFESSIONAL_DEMO_SUMMARY.md  README.md  ROADMAP.md  RUST_DEVELOPMENT_BEST_PRACTICES.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_FIXES_SUMMARY.md  SEC_EDGAR_XBRL_IMPLEMENTATION_PLAN.md  VIBE_CODING.md  capture-real-interface.sh  ci-env.config  codebase-analysis-config-mine.env  codebase-analysis-config-top5.env  create-automated-interface-demo.sh  (+41 more)
backend/: .dockerignore  Cargo.toml  Dockerfile  GRAPHQL_API.md  LICENSE  build_rs_cov.profraw  deny.toml  test_census_api.rs
backend/.cargo/: config.toml
backend/crates/econ-graph-auth/: Cargo.toml
backend/crates/econ-graph-auth/src/: lib.rs
backend/crates/econ-graph-backend/: Cargo.toml
backend/crates/econ-graph-backend/src/: integration_tests.rs  main.rs  metrics.rs
backend/crates/econ-graph-core/: Cargo.toml
backend/crates/econ-graph-core/src/: auth_models.rs  database.rs  error.rs  lib.rs  test_utils.rs
backend/crates/econ-graph-crawler/: Cargo.toml
backend/crates/econ-graph-graphql/: Cargo.toml
backend/crates/econ-graph-mcp/: Cargo.toml
backend/crates/econ-graph-mcp/src/: lib.rs  (+1 more)
backend/crates/econ-graph-sec-crawler/: Cargo.toml
backend/crates/econ-graph-services/: Cargo.toml
backend/docs/: BLS_API_EXPERIMENTAL_FINDINGS.md  CENSUS_BDS_INTEGRATION.md  CENSUS_BUREAU_INTEGRATION_SUMMARY.md  CRATE_SPLIT_PLAN.md  CRAWLER_DEPLOYMENT_GUIDE.md  CRAWLER_TUNING_GUIDE.md  DEVELOPER_GUIDE_DATABASE.md  RATE_LIMIT_SOURCES.md  WORLD_BANK_INTEGRATION_POST_MORTEM.md
backend/migrations/: economic_synonyms.syn
backend/migrations/2024-01-01-000001_create_data_sources/: down.sql  up.sql
backend/migrations/2024-01-01-000001_initial_schema/: down.sql  up.sql
backend/migrations/2024-01-01-000002_create_economic_series/: down.sql  up.sql
backend/migrations/2024-01-01-000002_global_analysis/: down.sql  up.sql
backend/migrations/2024-01-01-000003_auth_and_collaboration/: down.sql  up.sql
backend/migrations/2024-01-01-000003_create_data_points/: down.sql  up.sql
backend/migrations/2024-01-01-000004_create_crawl_queue/: down.sql  up.sql
backend/migrations/2024-01-15-000001_financial_data_schema/: down.sql  up.sql
backend/migrations/2024-01-15-000002_collaborative_annotations/: down.sql  up.sql
backend/migrations/2025-01-15-000001_create_global_analysis/: down.sql  up.sql
backend/migrations/2025-09-05-025423_add_fulltext_search/: down.sql  up.sql
backend/migrations/2025-09-07-060901_create_users_and_auth/: down.sql  up.sql
backend/migrations/2025-09-07-083202_change_ip_address_to_text/: down.sql  up.sql
backend/migrations/2025-09-07-171152_remove_search_vector/: down.sql  up.sql
backend/migrations/2025-09-12-053237_admin_audit_security_tables/: down.sql  up.sql
backend/migrations/2025-09-12-061542_comprehensive_crawler_enhancements/: down.sql  up.sql
backend/migrations/2025-09-12-071915_fix_user_table_not_null_constraints/: down.sql  up.sql
backend/migrations/2025-09-12-104236_comprehensive_crawler_and_schema_fixes/: down.sql  up.sql
backend/migrations/2025-09-12-124405_create_series_metadata_table/: down.sql  up.sql
backend/migrations/2025-09-13-021105-0000_consolidated_admin_audit_security_tables/: down.sql  up.sql
backend/migrations/2025-09-13-040258-0000_add_api_key_name_to_data_sources/: down.sql  up.sql
backend/migrations/2025-09-13-185806-0000_update_census_data_source_config/: down.sql  up.sql
backend/migrations/2025-09-13-213800-0000_add_api_key_name_to_data_sources/: down.sql  up.sql
backend/scripts/: README.md  populate_catalogs.sh  run-tests-optimized.sh
backend/src/: collaboration_integration_tests.rs  config.rs  database.rs  e2e_database_test.rs  e2e_postgresql_health_check.rs  e2e_tests.rs  epic_e2e_tests.rs  error.rs  error_logging_test.rs  graphql_annotation_tests.rs  integration_tests.rs  lib.rs  main.rs  mcp_server.rs  metrics.rs  metrics_enhanced.rs  metrics_service.rs  schema.rs  test_utils.rs
backend/src/__tests__/: integration_workflow_tests.rs
backend/src/auth/: comprehensive_integration_tests.rs  handlers.rs  handlers_tests.rs  integration_tests.rs  middleware.rs  middleware_tests.rs  mod.rs  models.rs  routes.rs  services.rs  simple_test.rs
backend/src/config/: api_keys.rs  app_config.rs  mod.rs
backend/src/graphql/: context.rs  dataloaders.rs  financial_mutation.rs  financial_query.rs  financial_subscription.rs  global_analysis.rs  mod.rs  mutation.rs  query.rs  schema.rs  statistical_analysis.rs  types.rs
backend/src/handlers/: admin.rs  mod.rs  search.rs  series.rs
backend/src/models/: admin.rs  crawl_attempt.rs  crawl_queue.rs  data_point.rs  data_source.rs  economic_series.rs  global_analysis.rs  mod.rs  search.rs  series_metadata.rs  user.rs
backend/src/services/: api_discovery_service.rs  collaboration_service.rs  comprehensive_crawler.rs  comprehensive_crawler_scheduler.rs  comprehensive_series_catalog.rs  crawler.rs  crawler_service.rs  crawler_service_complex.rs.bak  crawler_service_simple.rs  enhanced_crawler_scheduler.rs  enhanced_crawler_service.rs  export_service.rs  financial_data_service.rs  global_analysis_service.rs  mod.rs  performance_monitor.rs  queue_service.rs  search_service.rs  search_service_tests.rs  series_service.rs  statistical_analysis.rs  websocket_collaboration.rs
backend/tests/: mcp_server_integration_tests.rs  schema_validation_test.rs  world_bank_integration_tests.rs
(+750 files in other folders)
