[package]
name = "econ-graph-backend"
version = "0.1.0"
edition = "2021"
license = "MS-PL"

[dependencies]
# Web framework
warp = { version = "0.3", features = ["tls"] }
tokio-stream = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
diesel = { version = "=2.2.12", features = ["postgres", "chrono", "uuid", "numeric", "serde_json"] }
diesel-async = { version = "=0.5.2", features = ["postgres", "bb8"] }
bb8 = "=0.8.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid", "bigdecimal"] }
async-graphql-warp = "7.0"
dataloader = { version = "0.18", default-features = false, features = ["runtime-tokio"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal handling
rust_decimal = { version = "1.30", features = ["serde-with-str"] }

# HTTP client for crawling
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

# Configuration
config = "0.14"

# Environment
dotenvy = "0.15"

# URL parsing
url = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Decimal handling for financial data
bigdecimal = { version = "=0.4.1", features = ["serde"] }

# CSV parsing for data feeds
csv = "1.3"

# Authentication and security
bcrypt = "0.15"
jsonwebtoken = "9.2"

# OAuth clients
oauth2 = "4.4"

# Cron job scheduling
tokio-cron-scheduler = "0.9"

# Async trait support
async-trait = "0.1"

# Diesel migrations
diesel_migrations = "=2.2.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Random number generation
rand = "0.8"

# Metrics and monitoring
prometheus = "0.14"

# Lazy static initialization
once_cell = "1.19"
futures = { version = "0.3.31", features = ["std"] }

[[bin]]
name = "econ-graph-backend"
path = "src/main.rs"

[[bin]]
name = "crawler"
path = "src/bin/crawler.rs"

[[bin]]
name = "catalog_crawler"
path = "src/bin/catalog_crawler.rs"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"

# Integration testing with real databases
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["postgres"] }

# Additional testing utilities
serial_test = "3.0"
once_cell = "1.19"
# Warp already included above
futures = "0.3.31"
rust_decimal_macros = "1.37.1"
imara-diff = "0.1"
