[workspace]
members = [
    "crates/econ-graph-core",
    "crates/econ-graph-services",
    "crates/econ-graph-auth",
    "crates/econ-graph-graphql",
    "crates/econ-graph-crawler",
    "crates/econ-graph-mcp",
    "crates/econ-graph-backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MS-PL"

[workspace.dependencies]
# Common dependencies shared across crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bigdecimal = { version = "=0.4.1", features = ["serde"] }
rust_decimal = { version = "1.30", features = ["serde-with-str"] }
url = "2.5"
futures = { version = "0.3.31", features = ["std"] }
async-trait = "0.1"
once_cell = "1.19"

# Database
diesel = { version = "=2.2.12", features = ["postgres", "chrono", "uuid", "numeric", "serde_json"] }
diesel-async = { version = "=0.5.2", features = ["postgres", "bb8"] }
bb8 = "=0.8.6"
diesel_migrations = "=2.2.0"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "stream"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.19", features = ["derive"] }

# CSV parsing
csv = "1.3"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"
oauth2 = "4.4"

# Scheduling
tokio-cron-scheduler = "0.9"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Random
rand = "0.8"

# Metrics
prometheus = "0.14"
sysinfo = "0.30"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

# Web framework
warp = { version = "0.3", features = ["tls"] }
tokio-stream = "0.1"

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid", "bigdecimal"] }
async-graphql-warp = "7.0"
dataloader = { version = "0.18", default-features = false, features = ["runtime-tokio"] }

# Testing
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["postgres"] }
serial_test = "3.0"
rust_decimal_macros = "1.37.1"
imara-diff = "0.1"
